# coding-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/adr/: 0001-qwen3.6-as-default-model.md  0002-native-tool-calling-over-text-parsing.md  0003-json-structured-planner-output.md  0004-filesystem-discovered-managers.md  0005-hybrid-exit-strategy.md  0006-llm-intent-classifier.md  0007-planner-no-think-default.md  README.md
docs/superpowers/plans/: 2026-05-04-local-coding-agent.md
docs/superpowers/specs/: 2026-05-04-local-coding-agent-design.md
scripts/: start-open-webui.bat
src/agent/: __init__.py  __main__.py  agents_manager.py  cli.py  cli_input.py  cli_intent.py  cli_ui.py  command_policy.py  console.py  db.py  edit_applier.py  executor.py  llm_client.py  models.py  orchestrator.py  parser.py  planner.py  sandbox.py  skills_manager.py  subagent_runner.py  tool_runner.py  tool_schemas.py  tools.py  verifier.py
src/agent/cli/: __init__.py  input.py  intent.py  main.py  ui.py
src/agent/core/: __init__.py  executor.py  orchestrator.py  planner.py  subagent_runner.py  verifier.py
tests/: test_agents_manager.py  test_cli.py  test_codebase_index.py  test_command_policy.py  test_db.py  test_db_concurrency.py  test_executor.py  test_git_ops.py  test_integration.py  test_lint_gate.py  test_llm_client.py  test_main.py  test_mcp_manager.py  test_orchestrator.py  test_parser.py  test_planner.py  test_sandbox.py  test_skills_manager.py  test_subagent_runner.py  test_tool_runner.py  test_tools.py  test_verifier.py
(+22 files in other folders)
