[project]
name = "coding-agent"
version = "0.1.0"
description = "Local coding agent with planner/executor architecture"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.11",
]

[project.scripts]
agent = "agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
